--- a/index.html
+++ b/index.html
@@ -1,1 +1,117 @@
-<h1>!Hello world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Resume</title>
+<style>
+    body {
+        background-color: #262626;
+        color: white;
+        font-family: "Lato", sans-serif;
+    }
+    h1, h2 {
+        color: white;
+        text-transform: uppercase;
+        border-bottom: 1px solid white;
+    }
+    .header, .section {
+        margin: 0 auto;
+        max-width: 800px;
+    }
+    .contact-info {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .contact-info a {
+        color: white;
+        text-decoration: none;
+    }
+    .section ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    .section li {
+        margin-bottom: 10px;
+    }
+</style>
+</head>
+<body>
+
+<div class="header">
+    <h1>Daniele D'Agnelli</h1>
+    <div class="contact-info">
+        <a href="https://www.linkedin.com/in/dagnelli/">linkedin.com/in/dagnelli</a></p>
+    </div>
+</div>
+
+<div class="section">
+    <h2>Summary</h2>
+    <ul>
+        <li>Senior Engagement Manager with 12+ years in Professional Services, leading high-impact digital transformations that drive revenue growth and cost efficiency. Experienced in delivering AI solutions for complex challenges across Manufacturing, Healthcare, Oil&Gas, Telecom, and Financial Services sectors for global enterprises. Skilled in aligning cross-functional teams and collaborating with senior leadership on programs exceeding $15M, consistently exceeding metrics in adoption, customer satisfaction (NPS), and operational efficiency. Known for building trust-based client relationships and adept at navigating ambiguity. Technically proficient with expertise in software engineering, solution architecture, cloud engineering, and advanced machine learning, including LLMs and Generative AI.</li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Experience</h2>
+    <ul>
+        <li>
+            <strong>C3 AI</strong> - London, United Kingdom<br>
+            <em>Senior Engagement Manager</em> - June 2024 - Present
+            <ul>
+                <li>Responsible for the rollout and adoption of an AI-enabled Predictive Maintenance application for a Swiss building materials manufacturer, spanning over 100 plants, 2,000+ end users, and a total contract value exceeding $10M.</li>
+                <li>Partnered with cross-functional teams, including Product and Sales, to craft value-driven use cases, translating them into technical and functional requirements, detailed specifications, and actionable project plans.</li>
+                <li>Expanded relationships by identifying new use cases and incremental staffing needs.</li>
+                <li>Defined scope, requirements, timelines, and success metrics for projects, emphasizing customer self-sufficiency on the platform.</li>
+                <li>Led project governance activities, including project planning, weekly reviews, cross-functional meetings, and executive status reports, ensuring alignment and transparency throughout project lifecycles.</li>
+                <li>Directed all implementation activities, supervising teams across Application Development, Data Integration, Data Science, QA, and DevOps to ensure timely and successful delivery.</li>
+                <li>Established trusted advisor relationships with clients, tracking and mitigating risks to maintain high customer satisfaction (CSAT) consistently achieving NPS Score >70.</li>
+                <li>Played a key role in recruiting and attracting top talent to build a strong, client-focused services team.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Deloitte</strong> - London, United Kingdom<br>
+            <em>Manager</em> - October 2018 - July 2021
+            <ul>
+                <li>Grew Deloitte UK's Anaplan practice from inception to 25+ practitioners, leading the first enterprise-wide deployment for a large British telco.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Accenture</strong> - London, United Kingdom<br>
+            <em>Management Consultant</em> - April 2017 - September 2018
+        </li>
+        <li>
+            <strong>Codec</strong> - Dublin, Ireland<br>
+            <em>Consultant</em> - January 2015 - March 2017
+        </li>
+        <li>
+            <strong>Accenture</strong> - Milan, Italy<br>
+            <em>Software Engineer</em> - April 2012 - December 2014
+        </li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Education</h2>
+    <ul>
+        <li>
+            <strong>Abertay University</strong> - Dundee, UK<br>
+            <em>MSc Ethical Hacking and Cybersecurity (Distinction)</em> - 2021 - 2023
+        </li>
+        <li>
+            <strong>University of Bari Aldo Moro</strong> - Bari, Italy<br>
+            <em>BSc Computer Science</em> - 2005 - 2011
+        </li>
+    </ul>
+</div>
+
+<div class="section">
+    <h2>Skills</h2>
+    <ul>
+        <li><strong>Certifications:</strong> Prince2 Practitioner</li>
+        <li><strong>Languages:</strong> Fluent in English and Italian (native)</li>
+    </ul>
+</div>
+
+</body>
+</html>
