--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <h1>Daniele D'Agnelli</h1>
     <div class="contact-info">
         <a href="https://www.linkedin.com/in/dagnelli/">linkedin.com/in/dagnelli</a></p>
+        <p>London, United Kingdom</p>
     </div>
 </div>
 
