--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Resume</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
         background-color: #262626;
         color: white;
-        font-family: "Lato", sans-serif;
+        font-family: 'Roboto', sans-serif;
     }
     h1, h2 {
+        font-family: 'Open Sans', sans-serif;
         color: white;
         text-transform: uppercase;
         border-bottom: 1px solid white;
+        padding-bottom: 5px;
     }
     .header, .section {
         margin: 0 auto;
