--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Resume</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/psammod/computer-modern-web@1.0.0/cm-web-fonts.css">
 <style>
     body {
         background-color: #262626;
         color: white;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Computer Modern', sans-serif;
     }
     h1, h2 {
-        font-family: 'Open Sans', sans-serif;
         color: white;
         text-transform: uppercase;
         border-bottom: 1px solid white;
@@ -46,8 +43,9 @@
 <div class="header">
     <h1>Daniele D'Agnelli</h1>
     <div class="contact-info">
+        <p>+44 7411 391 713 | <a href="mailto:daniele@bidimensional.net">daniele@bidimensional.net</a> | 
         <a href="https://www.linkedin.com/in/dagnelli/">linkedin.com/in/dagnelli</a></p>
-        <p>London, United Kingdom</p>
+        <p>Flat 13, Parkway Apartments, Goodchild Road, London, N4 2BL, United Kingdom</p>
     </div>
 </div>
 
