--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Resume</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/psammod/computer-modern-web@1.0.0/cm-web-fonts.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
         background-color: #262626;
         color: white;
-        font-family: 'Computer Modern', sans-serif;
+        font-family: 'Cormorant Garamond', 'Times New Roman', Times, serif;
+        font-size: 16px;
+        margin: 0;
+        padding: 0;
     }
     h1, h2 {
         color: white;
         text-transform: uppercase;
+        font-weight: bold;
+    }
+    h1 {
+        text-align: center;
+        margin: 20px 0 5px 0;
+    }
+    h2 {
         border-bottom: 1px solid white;
         padding-bottom: 5px;
+        margin-top: 30px;
     }
     .header, .section {
         margin: 0 auto;
@@ -23,6 +36,7 @@
     }
     .contact-info {
         text-align: center;
+        font-size: 14px;
         margin-bottom: 20px;
     }
     .contact-info a {
@@ -30,11 +44,37 @@
         text-decoration: none;
     }
     .section ul {
-        list-style-type: none;
-        padding: 0;
+        list-style-type: disc;
+        padding-left: 20px;
     }
     .section li {
-        margin-bottom: 10px;
+        margin-bottom: 5px;
+    }
+    table {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .job-title {
+        font-weight: bold;
+    }
+    .job-details {
+        font-style: italic;
+        margin-top: 5px;
+    }
+    .dates {
+        text-align: right;
+        font-style: italic;
+    }
+    .experience-item ul {
+        list-style-type: disc;
+        padding-left: 20px;
+    }
+    .experience-item ul li {
+        margin-bottom: 5px;
+        line-height: 1.5;
+    }
+    .education, .skills {
+        margin-top: 0;
     }
 </style>
 </head>
@@ -43,9 +83,8 @@
 <div class="header">
     <h1>Daniele D'Agnelli</h1>
     <div class="contact-info">
-        <p>+44 7411 391 713 | <a href="mailto:daniele@bidimensional.net">daniele@bidimensional.net</a> | 
         <a href="https://www.linkedin.com/in/dagnelli/">linkedin.com/in/dagnelli</a></p>
-        <p>Flat 13, Parkway Apartments, Goodchild Road, London, N4 2BL, United Kingdom</p>
+        <p>London, United Kingdom</p>
     </div>
 </div>
 
@@ -58,58 +97,101 @@
 
 <div class="section">
     <h2>Experience</h2>
-    <ul>
-        <li>
-            <strong>C3 AI</strong> - London, United Kingdom<br>
-            <em>Senior Engagement Manager</em> - June 2024 - Present
-            <ul>
-                <li>Responsible for the rollout and adoption of an AI-enabled Predictive Maintenance application for a Swiss building materials manufacturer, spanning over 100 plants, 2,000+ end users, and a total contract value exceeding $10M.</li>
-                <li>Partnered with cross-functional teams, including Product and Sales, to craft value-driven use cases, translating them into technical and functional requirements, detailed specifications, and actionable project plans.</li>
-                <li>Expanded relationships by identifying new use cases and incremental staffing needs.</li>
-                <li>Defined scope, requirements, timelines, and success metrics for projects, emphasizing customer self-sufficiency on the platform.</li>
-                <li>Led project governance activities, including project planning, weekly reviews, cross-functional meetings, and executive status reports, ensuring alignment and transparency throughout project lifecycles.</li>
-                <li>Directed all implementation activities, supervising teams across Application Development, Data Integration, Data Science, QA, and DevOps to ensure timely and successful delivery.</li>
-                <li>Established trusted advisor relationships with clients, tracking and mitigating risks to maintain high customer satisfaction (CSAT) consistently achieving NPS Score >70.</li>
-                <li>Played a key role in recruiting and attracting top talent to build a strong, client-focused services team.</li>
-            </ul>
-        </li>
-        <li>
-            <strong>Deloitte</strong> - London, United Kingdom<br>
-            <em>Manager</em> - October 2018 - July 2021
-            <ul>
-                <li>Grew Deloitte UK's Anaplan practice from inception to 25+ practitioners, leading the first enterprise-wide deployment for a large British telco.</li>
-            </ul>
-        </li>
-        <li>
-            <strong>Accenture</strong> - London, United Kingdom<br>
-            <em>Management Consultant</em> - April 2017 - September 2018
-        </li>
-        <li>
-            <strong>Codec</strong> - Dublin, Ireland<br>
-            <em>Consultant</em> - January 2015 - March 2017
-        </li>
-        <li>
-            <strong>Accenture</strong> - Milan, Italy<br>
-            <em>Software Engineer</em> - April 2012 - December 2014
-        </li>
-    </ul>
+
+    <table>
+        <tr>
+            <td class="job-title">C3 AI</td>
+            <td class="dates">London, United Kingdom | June 2024 - Present</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="job-details">Senior Engagement Manager</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="experience-item">
+                <ul>
+                    <li>Responsible for the rollout and adoption of an AI-enabled Predictive Maintenance application for a Swiss building materials manufacturer, spanning over 100 plants, 2,000+ end users, and a total contract value exceeding $10M.</li>
+                    <li>Partnered with cross-functional teams, including Product and Sales, to craft value-driven use cases, translating them into technical and functional requirements, detailed specifications, and actionable project plans.</li>
+                    <li>Expanded relationships by identifying new use cases and incremental staffing needs.</li>
+                    <li>Defined scope, requirements, timelines, and success metrics for projects, emphasizing customer self-sufficiency on the platform.</li>
+                    <li>Led project governance activities, including project planning, weekly reviews, cross-functional meetings, and executive status reports, ensuring alignment and transparency throughout project lifecycles.</li>
+                    <li>Directed all implementation activities, supervising teams across Application Development, Data Integration, Data Science, QA, and DevOps to ensure timely and successful delivery.</li>
+                    <li>Established trusted advisor relationships with clients, tracking and mitigating risks to maintain high customer satisfaction (CSAT) consistently achieving NPS Score >70.</li>
+                    <li>Played a key role in recruiting and attracting top talent to build a strong, client-focused services team.</li>
+                </ul>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2" class="job-details">Engagement Manager</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="experience-item">
+                <ul>
+                    <li>Led strategic initiatives across all Business Units and Partners, managing program with a $15M budget and reporting directly to the VP of Customer Services.</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="job-title">Deloitte</td>
+            <td class="dates">London, United Kingdom | October 2018 - July 2021</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="job-details">Manager</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="experience-item">
+                <ul>
+                    <li>Grew Deloitte UK's Anaplan practice from inception to 25+ practitioners, leading the first enterprise-wide deployment for a large British telco.</li>
+                </ul>
+            </td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="job-title">Accenture</td>
+            <td class="dates">London, United Kingdom | April 2017 - September 2018</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="job-details">Management Consultant</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="job-title">Codec</td>
+            <td class="dates">Dublin, Ireland | January 2015 - March 2017</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="job-details">Consultant</td>
+        </tr>
+    </table>
+
+    <table>
+        <tr>
+            <td class="job-title">Accenture</td>
+            <td class="dates">Milan, Italy | April 2012 - December 2014</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="job-details">Software Engineer</td>
+        </tr>
+    </table>
+
 </div>
 
-<div class="section">
+<div class="section education">
     <h2>Education</h2>
     <ul>
-        <li>
-            <strong>Abertay University</strong> - Dundee, UK<br>
-            <em>MSc Ethical Hacking and Cybersecurity (Distinction)</em> - 2021 - 2023
-        </li>
-        <li>
-            <strong>University of Bari Aldo Moro</strong> - Bari, Italy<br>
-            <em>BSc Computer Science</em> - 2005 - 2011
-        </li>
+        <li><strong>Abertay University</strong> - Dundee, UK<br>
+            <em>MSc Ethical Hacking and Cybersecurity (Distinction)</em> - 2021 - 2023</li>
+        <li><strong>University of Bari Aldo Moro</strong> - Bari, Italy<br>
+            <em>BSc Computer Science</em> - 2005 - 2011</li>
     </ul>
 </div>
 
-<div class="section">
+<div class="section skills">
     <h2>Skills</h2>
     <ul>
         <li><strong>Certifications:</strong> Prince2 Practitioner</li>
